infra/k8s/dev/ticketing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing
  template:
    metadata:
      labels:
        app: ticketing
    spec:
      containers:
        - name: ticketing
          image: sharmarajdaksh/gittix/ticketing:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-clusterip
spec:
  selector:
    app: ticketing
  type: ClusterIP
  ports:
    - name: ticketing
      protocol: TCP
      port: 3000
      targetPort: 3000
