infra/k8s/dev/ticketing-mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-mongodb
  template:
    metadata:
      labels:
        app: ticketing-mongodb
    spec:
      containers:
        - name: ticketing-mongodb
          image: mongo:3.6
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
kind: Service
apiVersion: v1
metadata:
  name: ticketing-mongodb-clusterip
spec:
  selector:
    app: ticketing-mongodb
  type: ClusterIP
  ports:
    - name: ticketing-mongodb
      port: 27017
      targetPort: 27017
